# Windvane-Calibrator

./: .gitignore  ARCHITECTURE_IMPROVEMENTS.md  CLEAN_REPOSITORY_SUMMARY.md  FILE_NAMING_IMPROVEMENTS.md  GOOGLE_CPP_FILE_NAMING.md  NAMING_MIGRATION_GUIDE.md  README.md  RESTORATION_SUMMARY.md  RESTORED_FEATURES.md  STANDARD_CPP_FILE_NAMING.md  STRUCTURE.md  Windvane Calibrator.code-workspace  library.json  library.properties  platformio.ini
examples/: README.md
examples/AdvancedCalibration/: AdvancedCalibration.ino  README.md
examples/BasicWindVane/: BasicWindVane.ino  README.md  platformio.ini
examples/CompleteWindVaneSystem/: CompleteWindVaneSystem.ino  README.md
examples/ExpertFeatures/: ExpertFeatures.ino
examples/HostSimulation/: HostSimulation.cpp  HostSimulation.ino  README.md  platformio.ini
examples/SimpleWindVane/: SimpleWindVane.ino
include/: IWindVane.h  WindVane.h
include/CalibrationStrategies/: ICalibrationStrategy.h  IRawWindReader.h
include/HardwareAbstraction/: IPinReader.h
include/RawWindReaders/: ReedSwitchWindDirectionReader.h
include/WindVane/: Builder.h  Config.h  Platform.h  ServiceContainer.h  Types.h  WindVane.h
lib/: README
lib/Core/: WindVane.cpp
lib/Interfaces/: IAnalogDigitalConverter.h
lib/Menu/: ArduinoMenu.cpp  ArduinoMenu.h  DiagnosticsMenu.cpp  DiagnosticsMenu.h  SettingsMenu.cpp  SettingsMenu.h
lib/Platform/: IPlatform.h  Platform.h  TimeUtils.h  library.json
lib/WindVane/: IADC.h  WindVane.cpp  WindVane.h  WindVaneBuilder.h
lib/WindVaneMenu/: DiagnosticsMenu.cpp  DiagnosticsMenu.h  DiagnosticsView.h  MenuController.h  MenuDisplayController.cpp  MenuDisplayController.h  MenuDisplayView.cpp  MenuDisplayView.h  MenuLogic.cpp  MenuLogic.h  MenuPresenter.cpp  MenuPresenter.h  MenuState.h  MenuTypes.h  SettingsMenu.cpp  SettingsMenu.h  WindVaneCompass.h  WindVaneMenu.cpp  (+9 more)
scripts/: migrate_to_google_cpp_style.sh  migrate_to_standard_cpp.sh
src/: App.cpp  App.h  Config.h  PlatformFactory.cpp  PlatformFactory.h  README.md  SimplifiedApp.h  WindVane.cpp  main.cpp
test/: CMakeLists.txt  README.md  run_tests.sh  test_main.cpp
test/Unit/Core/: WindVaneTest.cpp
test/integration/: test_complete_system.cpp
test/test_calibration/: ClusterManager.cpp
test/test_diagnostics/: DiagnosticsBus.cpp
test/test_hardwareinterface/: ESP32ADC.cpp
test/test_io/: IOHandlers.cpp
test/test_storage/: FileCalibrationStorage.cpp  FileSettingsStorage.cpp
test/test_time/: TimeMs.cpp
test/unit/: test_calibration_manager.cpp  test_menu_system.cpp  test_storage_system.cpp  test_wind_vane_core.cpp
test/unit/core/: wind_vane_test.cc
test/unit/core/calibration/: cluster_manager_test.cpp
(+108 files in other folders)
